--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@icon-park/vue-next": "^1.4.2",
     "electron-updater": "^6.1.7",
+    "element-plus": "^2.7.8",
     "lodash": "^4.17.21",
     "sass": "^1.77.8",
     "vue-router": "4"
