--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "@icon-park/vue-next": "^1.4.2",
+    "axios": "^1.7.3",
     "electron-updater": "^6.1.7",
     "element-plus": "^2.7.8",
     "lodash": "^4.17.21",
+    "pinia": "^2.2.0",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "sass": "^1.77.8",
     "vue-router": "4"
   },
