--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "electron-updater": "^6.1.7",
     "element-plus": "^2.7.8",
     "lodash": "^4.17.21",
+    "node-fetch": "2",
     "pinia": "^2.2.0",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sass": "^1.77.8",
-    "vue-router": "4"
+    "vue-router": "4",
+    "wallpaper": "v5.0.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
