--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.electron.app
-productName: wallpaper
+appId: com.banmashou.app
+productName: 斑马兽桌面壁纸
 directories:
   buildResources: build
 files:
@@ -14,6 +14,9 @@ asarUnpack:
 win:
   executableName: wallpaper
 nsis:
+  oneClick: false
+  allowElevation: true
+  allowToChangeInstallationDirectory: true
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
